chore(tooltip.css): ajuster le rembourrage dans l'info-bulle pour améliorer l'espacement et l'alignement chore(tooltip.css): changer la direction flex à column-reverse et justifier le contenu à space-between dans l'info-bulle pour améliorer  la mise en page chore(tooltip.css): ajouter des propriétés de marge à la classe . learn_more pour améliorer l'espacement et l'alignement chore(tooltip.js): mettre à jour l'URL de récupération pour le fichier tooltip.json vers le chemin correct

--- a/systeme/css/tooltip.css
+++ b/systeme/css/tooltip.css
@@ -14,7 +14,7 @@
   color: #fff;
   text-align: center;
   border-radius: 4px;
-  padding: 20px 10px;
+  padding-bottom: 20px;
   position: absolute;
   z-index: 1;
   bottom: 125%;
@@ -24,9 +24,9 @@
   transition: opacity 0.3s;
   font-style: normal;
   display: flex;
-  flex-direction: row;
+  flex-direction: column-reverse;
   flex-wrap: wrap;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 .tooltiptext::after{
@@ -52,12 +52,14 @@
   /* inverser la couleur fill ne fonctionne pas  :(  */ 
   filter: invert(1);
 }
-.learn_more{
-  display:inline-flex;
-  height:20px;
-  width:20px;
-  filter:invert(1);
-  padding:0;
+.learn_more {
+  display: inline-flex;
+  height: 20px;
+  width: 20px;
+  filter: invert(1);
+  margin-left: 6px;
+  margin-bottom: 6px;
+  margin-top: 2px;
 }
 .tooltip:hover .tooltiptext {
   visibility: visible;  
